Various android fixes